--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,15 +1,16 @@
-# Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
-fos_rest: null
-#    param_fetcher_listener:  true
-#    allowed_methods_listener:  true
-#    routing_loader: true
-#    view:
-#        view_response_listener:  true
-#    exception:
-#        codes:
-#            App\Exception\MyException: 403
-#        messages:
-#            App\Exception\MyException: Forbidden area.
-#    format_listener:
-#        rules:
-#            - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
+fos_rest:
+    body_converter:
+        enabled: true
+    param_fetcher_listener: force
+#    body_listener:
+#        array_normalizer: fos_rest.normalizer.camel_keys
+    format_listener:
+        enabled: true
+        rules:
+            - { path: '^/', priorities: ['json', 'html'], fallback_format: 'html' }
+    routing_loader:
+        default_format: json
+        include_format: false
+    service:
+        serializer: "fos_rest.serializer.jms"
+
