--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.5",
+        "sensio/framework-extra-bundle": "^5.1",
         "jms/serializer": "^3.2",
         "jms/serializer-bundle": "^3.4",
         "knplabs/doctrine-behaviors": "^1.6",
+        "nelmio/cors-bundle": "^1.5",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
